# munihac-mastermind

./: munihac-mastermind.cabal  stack.yaml
src/: MasterMind.hs
