name:                munihac-mastermind
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable munihac-mastermind
  hs-source-dirs:      src
  main-is:             MasterMind.hs
  build-depends:       base >= 4.7 && < 5,
                       random >= 1.1 && < 1.2
  default-language:    Haskell2010
